--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ try {
 <br>
 <a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b">LinkedIn Profile</a>
 <br>
-<a href="file:///F:/Homepage/ashutoshpattnaik.github.io/footprints.html">Ph.D. Footprint</a>
+<a href="footprints.html">Ph.D. Footprint</a>
 <br></p>
 </td></tr></tbody></table>
 <h2>About</h2>
@@ -47,7 +47,7 @@ I am a member of High Performance Computing Lab at Penn State, where I work with
 -->
 
 
-<p>I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html">High Performance Computing Lab</a> in the <a href="http://www.cse.psu.edu/">Department of Computer Science and Engineering</a> at <a href="http://www.psu.edu/">The Pennsylvania State University</a> where I work with my advisor <a href="http://www.cse.psu.edu/people/das">Dr. Chita R. Das</a>. I also collaborate with <a href="http://www.cse.psu.edu/~kandemir/">Dr. Mahmut T. Kandemir</a> in the <a href="http://www.cse.psu.edu/research/mdl"> Microsystems Design Lab</a>.  
+<p>I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html">High Performance Computing Lab</a> in the <a href="http://www.cse.psu.edu/">Department of Computer Science and Engineering</a> at <a href="http://www.psu.edu/">The Pennsylvania State University</a> where I work with my advisor <a href="http://www.cse.psu.edu/people/das">Dr. Chita Das</a>. I also collaborate with <a href="http://www.cse.psu.edu/~kandemir/">Dr. Mahmut T. Kandemir</a> in the <a href="http://www.cse.psu.edu/research/mdl"> Microsystems Design Lab</a>.  
 <!--
 I also collaborate with 
 <a href="http://users.ece.cmu.edu/~omutlu/">Onur Mutlu</a>, 
@@ -77,7 +77,7 @@ Proceedings of the <a href="http://www.icccs.co.in/"> 2nd International Conferen
 </li>
 <li><p>Internship at <a href="http://www.drdo.gov.in/drdo/labs/PXE/English/index.jsp?pg=homebody.jsp"> Proof &amp; Experimental Establishment (PXE), Defence Research and Development Organisation </a>, December 2011 <br></p>
 </li>
-<li><p>Internship at <a href="file:///F:/Homepage/ashutoshpattnaik.github.io/www.sail.co.in/">Steel Authority of India Limited (SAIL)</a>, May 2011 - June 2011 <br></p>
+<li><p>Internship at <a href="file://www.sail.co.in/">Steel Authority of India Limited (SAIL)</a>, May 2011 - June 2011 <br></p>
 </li>
 </ul>
 <h2>Educational Background</h2>
