--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ I am a member of High Performance Computing Lab at Penn State, where I work with
 -->
 
 
-<p>I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html">High Performance Computing Lab</a> in the <a href="http://www.cse.psu.edu/">Department of Computer Science and Engineering</a> at <a href="http://www.psu.edu/">The Pennsylvania State University</a> where I work with my advisor <a href="http://www.cse.psu.edu/people/das">Dr. Chita Das</a>. I also collaborate with <a href="http://www.cse.psu.edu/~kandemir/">Dr. Mahmut T. Kandemir</a> in the <a href="http://www.cse.psu.edu/research/mdl"> Microsystems Design Lab</a>.  
+<p>I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html">High Performance Computing Lab</a> in the <a href="http://www.cse.psu.edu/">Department of Computer Science and Engineering</a> at <a href="http://www.psu.edu/">The Pennsylvania State University</a> where I work with my advisor <a href="http://www.cse.psu.edu/people/das">Dr. Chita R. Das</a>. I also collaborate with <a href="http://www.cse.psu.edu/~kandemir/">Dr. Mahmut T. Kandemir</a> in the <a href="http://www.cse.psu.edu/research/mdl"> Microsystems Design Lab</a>.  
 <!--
 I also collaborate with 
 <a href="http://users.ece.cmu.edu/~omutlu/">Onur Mutlu</a>, 
