--- a/footprints.html
+++ b/footprints.html
@@ -13,7 +13,7 @@
 </div>
 <h2>Spring 2015</h2>
 <ul>
-<li><p>Coursework: Compiler Construction (CSE 521) [Instructor: <a href="http://www.cse.psu.edu/~anand">Dr. Anand Sivasubramaniam</a>]</p>
+<li><p>Coursework: Compiler Construction (CSE 521) [Instructor: <a href="http://www.cse.psu.edu/~kandemir/">Dr. Mahmut T. Kandemir</a>]</p>
 </li>
 <li><p>Coursework: Colloquium - III (CSE 590)</p>
 </li>
@@ -22,19 +22,19 @@
 </ul>
 <h2>Fall 2014</h2>
 <ul>
-<li><p>Passed Candidacy Exams in Computer Networks, Operating Systems, Computer Vision &amp; Image Processing to become a Ph.D. Candidate</p>
+<li><p>Coursework: Algorithm Design and Analysis (CSE 565) [Instructor: <a href="http://www.cse.psu.edu/~asmith">Dr. Adam Smith</a>]</p>
 </li>
-<li><p>Coursework: Operating Systems Design (CSE 511) [Instructor: <a href="http://www.cse.psu.edu/~anand">Dr. Anand Sivasubramaniam</a>]</p>
+<li><p>Coursework: Approximate Computing (CSE 597F) [Instructor: <a href="http://www.cse.psu.edu/~anand/">Dr. Anand Sivasubramaniam</a>]</p>
+<li><p>Coursework: Research Credits (CSE 596)  [Advisor: <a href="http://www.cse.psu.edu/~das">Dr. Chita Das</a>]</p>
 </li>
-<li><p>Coursework: Performance Evaluation (CSE 517) [Instructor: <a href="http://www.cse.psu.edu/~das">Dr. Chita Das</a>]</p>
 </li>
 <li><p>Coursework: Colloquium - II (CSE 590)</p>
-</li>
-<li><p>Coursework: Research Credits (CSE 596)  [Advisor: <a href="http://www.cse.psu.edu/~das">Dr. Chita Das</a>]</p>
 </li>
 </ul>
 <h2>Spring 2014</h2>
 <ul>
+<li><p>Passed Candidacy Exams in Computer Architecture, Operating Systems, Computer Vision &amp; Image Processing to become a Ph.D. Candidate</p>
+</li>
 <li><p>Coursework: Topics in Computer Architecture (CSE 539)  [Instructor: <a href="http://www.cse.psu.edu/~vijay">Dr. Vijaykrishnan Narayanan</a>]</p>
 </li>
 <li><p>Coursework: VLSI Circuit Design (CMPEN 411)  [Instructor: <a href="http://www.cse.psu.edu/~yuanxie">Dr. Yuan Xie</a>]</p>
@@ -43,7 +43,7 @@
 </li>
 <li><p>Coursework: Colloquium - I (CSE 590)</p>
 </li>
-<li><p>Coursework: Research Credit (CSE 591)  [Advisor: <a href="http://www.cse.psu.edu/people/das">Dr. Chita Das</a>]</p>
+<li><p>Coursework: Research Credit (CSE 591)  [Advisor: <a href="http://www.cse.psu.edu/people/das">Dr. Chita R. Das</a>]</p>
 </li>
 </ul>
 <h2>Fall 2013</h2>
