--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@ Page generated 2015-01-05 04:48:12 EST, by <a href="http://jemdoc.jaboc.net/">je
 </div>
 </div>
 </div>
-<!-- Start of StatCounter Code for Default Guide -->
+
+
+<!-- Start of StatCounter Code for Default Guide 
 <script type="text/javascript">
 var sc_project=8946457;
 var sc_invisible=1;
