--- a/index.html
+++ b/index.html
@@ -132,24 +132,22 @@ Page generated 2015-01-05 04:48:12 EST, by <a href="http://jemdoc.jaboc.net/">je
 </div>
 </div>
 
-
-<!-- Start of StatCounter Code for Default Guide 
+<!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
-var sc_project=8946457;
-var sc_invisible=1;
-var sc_security="04cccc98";
+var sc_project=10245763; 
+var sc_invisible=1; 
+var sc_security="6de2261b"; 
 var scJsHost = (("https:" == document.location.protocol) ?
 "https://secure." : "http://www.");
 document.write("<sc"+"ript type='text/javascript' src='" +
 scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
-</script><script type="text/javascript" src="./index_files/counter.js"></script><script type="text/javascript" src="./index_files/counter(1).js"></script>
-<noscript>&amp;lt;div class="statcounter"&amp;gt;&amp;lt;a title="hit counter"
-href="http://statcounter.com/free-hit-counter/"
-target="_blank"&amp;gt;&amp;lt;img class="statcounter"
-src="http://c.statcounter.com/8946457/0/04cccc98/1/"
-alt="hit counter"&amp;gt;&amp;lt;/a&amp;gt;&amp;lt;/div&amp;gt;</noscript>
+</script>
+<noscript><div class="statcounter"><a title="free hit
+counter" href="http://statcounter.com/free-hit-counter/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/10245763/0/6de2261b/1/"
+alt="free hit counter"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
-
 
 </body></html>
