--- a/footprints.html
+++ b/footprints.html
@@ -17,27 +17,29 @@
 </li>
 <li><p>Coursework: Colloquium - III (CSE 590)</p>
 </li>
-<li><p>Coursework: Research Credits (CSE 596)  [Advisor: <a href="http://www.cse.psu.edu/~das">Dr. Chita Das</a>]</p>
+<li><p>Coursework: Research Credits (CSE 596)  [Advisor: <a href="http://www.cse.psu.edu/~das">Dr. Chita R. Das</a>]</p>
 </li>
 </ul>
 <h2>Fall 2014</h2>
 <ul>
 <li><p>Coursework: Algorithm Design and Analysis (CSE 565) [Instructor: <a href="http://www.cse.psu.edu/~asmith">Dr. Adam Smith</a>]</p>
+<li><p>Coursework: Hands-on Experience on Programming Manycores (CSE 597D)  [Instructor: <a href="http://www.cse.psu.edu/~kandemir">Dr. Mahmut T. Kandemir</a>]</p>
+</li>
 </li>
 <li><p>Coursework: Approximate Computing (CSE 597F) [Instructor: <a href="http://www.cse.psu.edu/~anand/">Dr. Anand Sivasubramaniam</a>]</p>
-<li><p>Coursework: Research Credits (CSE 596)  [Advisor: <a href="http://www.cse.psu.edu/~das">Dr. Chita Das</a>]</p>
-</li>
 </li>
 <li><p>Coursework: Colloquium - II (CSE 590)</p>
 </li>
 </ul>
 <h2>Spring 2014</h2>
 <ul>
-<li><p>Passed Candidacy Exams in Computer Architecture, Operating Systems, Computer Vision &amp; Image Processing to become a Ph.D. Candidate</p>
+<li><p>Passed Candidacy Exams in Computer Architecture and
+Organization, Computer Networks, Numerical Analysis and Scientific
+Computing to become a Ph.D. Candidate</p>
 </li>
 <li><p>Coursework: Topics in Computer Architecture (CSE 539)  [Instructor: <a href="http://www.cse.psu.edu/~vijay">Dr. Vijaykrishnan Narayanan</a>]</p>
 </li>
-<li><p>Coursework: VLSI Circuit Design (CMPEN 411)  [Instructor: <a href="http://www.cse.psu.edu/~yuanxie">Dr. Yuan Xie</a>]</p>
+<li><p>Coursework: Data Structure and Algorithms (CMPSC 465)  [Instructor: <a href="https://www.cse.psu.edu/people/pashadag">Dr. Paul Medvedev</a>]</p>
 </li>
 <li><p>Coursework: Programming Languages and Concepts (CMPSC 461)  [Instructor: <a href="http://www.cse.psu.edu/~hannan">Dr. John Hannan</a>]</p>
 </li>
@@ -63,5 +65,22 @@ Best Viewed in Google Chrome (version 24 or above), Last Updated 2014-03-08 18:5
 </div>
 </div>
 
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=10245763; 
+var sc_invisible=1; 
+var sc_security="6de2261b"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="free hit
+counter" href="http://statcounter.com/free-hit-counter/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/10245763/0/6de2261b/1/"
+alt="free hit counter"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 
 </body></html>
