--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@ Proceedings of the <a href="http://www.icccs.co.in/"> 2nd International Conferen
 </ul>
 <h2>Teaching</h2>
 <ul>
-<li><p>Teaching Assistant, CMPEN 431 - Introduction to Computer Architecture (Spring 2014) <br></p>
+<li><p>Teaching Assistant, CMPEN 431 - Introduction to Computer Architecture, Spring 2014 <br></p>
 </li>
-<li><p>Teaching Assistant, CMPEN 270 - Digital Design: Theory and Practice (Fall 2013) <br></p>
+<li><p>Teaching Assistant, CMPEN 270 - Digital Design: Theory and Practice, Fall 2013 <br></p>
 </li>
 </ul>
 <h2>Experience</h2>
@@ -84,7 +84,7 @@ Proceedings of the <a href="http://www.icccs.co.in/"> 2nd International Conferen
 </li>
 <li><p>Internship at <a href="http://www.drdo.gov.in/drdo/labs/PXE/English/index.jsp?pg=homebody.jsp"> Proof &amp; Experimental Establishment (PXE), Defence Research and Development Organisation </a>, December 2011 <br></p>
 </li>
-<li><p>Internship at <a href="file://www.sail.co.in/">Steel Authority of India Limited (SAIL)</a>, May 2011 - June 2011 <br></p>
+<li><p>Internship at <a href="http://www.sail.co.in/">Steel Authority of India Limited (SAIL)</a>, May 2011 - June 2011 <br></p>
 </li>
 </ul>
 <h2>Educational Background</h2>
