--- a/footprints.html
+++ b/footprints.html
@@ -11,6 +11,8 @@
 <div id="toptitle">
 <h1>Ph.D. Footprint</h1>
 </div>
+<h2><a href="index.html">Home</a></h2>
+<ul>
 <h2>Spring 2015</h2>
 <ul>
 <li><p>Coursework: Compiler Construction (CSE 521) [Instructor: <a href="http://www.cse.psu.edu/~kandemir/">Dr. Mahmut T. Kandemir</a>]</p>
@@ -57,7 +59,7 @@ Computing to become a Ph.D. Candidate</p>
 <li><p>Coursework: Numerical Computations (CMPSC 451)  [Instructor: <a href="http://www.cse.psu.edu/~madduri/index.html">Dr. Kamesh Madduri</a>]</p>
 </li>
 </ul>
-<h2>Back to <a href="index.html">Home</a></h2>
+
 <div id="footer">
 <div id="footer-text">
 Best Viewed in Google Chrome (version 24 or above), Last Updated 2014-03-08 18:58:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
