--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@ try {
 <td align="right"><p>Ashutosh Pattnaik <br></p>
 <p>Ph.D. Candidate <br>
 111 N IST Building <br>
-<a href="http://www.cse.psu.edu/">Department of Computer Science and Engineering</a> <br>
-<a href="http://www.psu.edu/">Penn State University</a>, University Park, PA, 16802 <br> </p>
+<a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> <br>
+<a href="http://www.psu.edu/" target="_blank">Penn State University</a>, University Park, PA, 16802 <br> </p>
 
 <img src="./index_files/email.png" alt="" width="240px" height="15px">
 <br>
 <!--
 <p><b>Email</b> : <label class="unselectable">ashutosh@cse.psu.edu</label>  <br>
 -->
-<a href="http://scholar.google.com/citations?user=wVVAv80AAAAJ">Google Scholar Profile</a>
+<a href="http://scholar.google.com/citations?user=wVVAv80AAAAJ" target="_blank">Google Scholar Profile</a>
 <br>
-<a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b">LinkedIn Profile</a>
+<a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b" target="_blank">LinkedIn Profile</a>
 <br>
 <a href="footprints.html">Ph.D. Footprint</a>
 <br></p>
@@ -54,7 +54,7 @@ I am a member of High Performance Computing Lab at Penn State, where I work with
 -->
 
 
-<p>I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html">High Performance Computing Lab</a> in the <a href="http://www.cse.psu.edu/">Department of Computer Science and Engineering</a> at <a href="http://www.psu.edu/">The Pennsylvania State University</a> where I work with my advisor <a href="http://www.cse.psu.edu/people/das">Dr. Chita R. Das</a>. I also collaborate with <a href="http://www.cse.psu.edu/~kandemir/">Dr. Mahmut T. Kandemir</a> in the <a href="http://www.cse.psu.edu/research/mdl"> Microsystems Design Lab</a>.  
+<p>I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> in the <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a> where I work with my advisor <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. I also collaborate with <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a> in the <a href="http://www.cse.psu.edu/research/mdl" target="_blank"> Microsystems Design Lab</a>.  
 <!--
 I also collaborate with 
 <a href="http://users.ece.cmu.edu/~omutlu/">Onur Mutlu</a>, 
@@ -65,8 +65,8 @@ and <a href="https://sites.google.com/site/lohgabe/">Gabriel H. Loh</a>.
 <p>Broadly, my research interests lie in the area of computer architecture. Specifically, I work on GPU architectures. I am also interested in Mobile Systems and SoCs. </p>
 <h2>Publications</h2>
 <ul>
-<li><p><b>Ashutosh Pattnaik</b>, Sharad Agarwal, Subhasis Chand <br> <a href="http://www.sciencedirect.com/science/article/pii/S2212017312005592"><i>A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm</i></a>, <br>
-Proceedings of the <a href="http://www.icccs.co.in/"> 2nd International Conference on Communication, Computing &amp; Security</a> 
+<li><p><b>Ashutosh Pattnaik</b>, Sharad Agarwal, Subhasis Chand <br> <a href="http://www.sciencedirect.com/science/article/pii/S2212017312005592" target="_blank"><i>A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm</i></a>, <br>
+Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd International Conference on Communication, Computing &amp; Security</a> 
 <b><span style="color: FireBrick ">(ICCCS)</span></b>, Rourkela, India, October 2012 <br> 
 </p>
 </li>
@@ -80,18 +80,18 @@ Proceedings of the <a href="http://www.icccs.co.in/"> 2nd International Conferen
 </ul>
 <h2>Experience</h2>
 <ul>
-<li><p>Internship at <a href="http://www.iitkgp.ac.in/"> Indian Institute of Technology, Kharagpur</a>, May 2012 - July 2012 <br></p>
+<li><p>Internship at <a href="http://www.iitkgp.ac.in/" target="_blank"> Indian Institute of Technology, Kharagpur</a>, May 2012 - July 2012 <br></p>
 </li>
-<li><p>Internship at <a href="http://www.drdo.gov.in/drdo/labs/PXE/English/index.jsp?pg=homebody.jsp"> Proof &amp; Experimental Establishment (PXE), Defence Research and Development Organisation </a>, December 2011 <br></p>
+<li><p>Internship at <a href="http://www.drdo.gov.in/drdo/labs/PXE/English/index.jsp?pg=homebody.jsp" target="_blank"> Proof &amp; Experimental Establishment (PXE), Defence Research and Development Organisation </a>, December 2011 <br></p>
 </li>
-<li><p>Internship at <a href="http://www.sail.co.in/">Steel Authority of India Limited (SAIL)</a>, May 2011 - June 2011 <br></p>
+<li><p>Internship at <a href="http://www.sail.co.in/" target="_blank">Steel Authority of India Limited (SAIL)</a>, May 2011 - June 2011 <br></p>
 </li>
 </ul>
 <h2>Educational Background</h2>
 <ul>
-<li><p>Ph.D. Candidate in <a href="http://www.cse.psu.edu/">Computer Science and Engineering</a>, <a href="http://www.psu.edu/">The Pennsylvania State University</a></p> <p>August 2013 - Present</p>
+<li><p>Ph.D. Candidate in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a>, <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a></p> <p>August 2013 - Present</p>
 </li>
-<li><p>B. Tech. in <a href="http://nitrkl.ac.in/Academic/1Department/Home.aspx?hrtuery765hd=OA==-GS5YNjRcEt0=">Electronics and Instrumentation Engineering</a>, <a href="http://www.nitrkl.ac.in/">National Institute of Technology, Rourkela</a> 
+<li><p>B. Tech. in <a href="http://nitrkl.ac.in/Academic/1Department/Home.aspx?hrtuery765hd=OA==-GS5YNjRcEt0=" target="_blank">Electronics and Instrumentation Engineering</a>, <a href="http://www.nitrkl.ac.in/" target="_blank">National Institute of Technology, Rourkela</a> 
 </p> <p>August 2009 - May 2013</p>
 </li>
 </ul>
@@ -109,11 +109,11 @@ Proceedings of the <a href="http://www.icccs.co.in/"> 2nd International Conferen
 </ul>
 <h2>Memberships</h2>
 <ul>
-<li><p><a href="http://www.ieee.org/">IEEE Student Member</a> <br></p>
+<li><p><a href="http://www.ieee.org/" target="_blank">IEEE Student Member</a> <br></p>
 </li>
-<li><p><a href="http://www.acm.org/">ACM Student</a> <br></p>
+<li><p><a href="http://www.acm.org/" target="_blank">ACM Student</a> <br></p>
 </li>
-<li><p><a href="http://www.sigarch.org/">ACM SIGARCH</a> <br></p>
+<li><p><a href="http://www.sigarch.org/" target="_blank">ACM SIGARCH</a> <br></p>
 </li>
 </ul>
 <h2>Hobbies</h2>
@@ -122,12 +122,12 @@ Proceedings of the <a href="http://www.icccs.co.in/"> 2nd International Conferen
 </li>
 </ul>
  <h2>Links</h2>
-<p><a href="http://scholar.google.com/citations?user=wVVAv80AAAAJ">Google Scholar</a> <br>
-<a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b">LinkedIn</a> <br>
-<a href="http://nachi.quora.com/How-to-delete-a-range-subset-of-PBS-jobs-from-queue">Useful PBS Commands and Scripts</a></p>
+<p><a href="http://scholar.google.com/citations?user=wVVAv80AAAAJ" target="_blank">Google Scholar</a> <br>
+<a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b" target="_blank">LinkedIn</a> <br>
+<a href="http://nachi.quora.com/How-to-delete-a-range-subset-of-PBS-jobs-from-queue" target="_blank">Useful PBS Commands and Scripts</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2015-01-05 04:48:12 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2015-01-05 04:48:12 EST, by <a href="http://jemdoc.jaboc.net/" target="_blank">jemdoc</a>.
 </div>
 </div>
 </div>
