--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ I am a member of High Performance Computing Lab at Penn State, where I work with
 
 
 <p>I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> in the <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a> where I work with my advisor <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. I also collaborate with <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a> in the <a href="http://www.cse.psu.edu/research/mdl" target="_blank"> Microsystems Design Lab</a>.  
+
+<p>I have joined <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/">AMD Research</a> as a Co-Op Engineer since June 2015.
 <!--
 I also collaborate with 
 <a href="http://users.ece.cmu.edu/~omutlu/">Onur Mutlu</a>, 
@@ -65,7 +67,14 @@ and <a href="https://sites.google.com/site/lohgabe/">Gabriel H. Loh</a>.
 <p>Broadly, my research interests lie in the area of computer architecture. Specifically, I work on GPU architectures. I am also interested in Mobile Systems and SoCs. </p>
 <h2>Publications</h2>
 <ul>
-<li><p><b>Ashutosh Pattnaik</b>, Sharad Agarwal, Subhasis Chand <br> <a href="http://www.sciencedirect.com/science/article/pii/S2212017312005592" target="_blank"><i>A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm</i></a>, <br>
+<li><p>Adwait Jog, Onur Kayiran, Tuba Kesten, <b>Ashutosh Pattnaik</b>, Evgeny Bolotin, Niladrish Chatterjee, Stephen W. Keckler, Mahmut T. Kandemir, Chita R. Das <br> <i><span style="color: DarkBlue ">Anatomy of GPU Memory System for Multi-Application Execution</span></i></a>, <br>
+Proceedings of the <a href="http://www.memsys.io/" target="_blank"> 1st International Symposium on Memory Systems </a> 
+<b><span style="color: FireBrick ">(MEMSYS)</span></b>, Washington, DC, October 2015 (To appear) <br> 
+</p>
+</li>
+</ul>
+<ul>
+<li><p><b>Ashutosh Pattnaik</b>, Sharad Agarwal, Subhasis Chand <br> <a href="http://www.sciencedirect.com/science/article/pii/S2212017312005592" target="_blank"><i><span style="color: DarkBlue ">A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm</span></i></a>, <br>
 Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd International Conference on Communication, Computing &amp; Security</a> 
 <b><span style="color: FireBrick ">(ICCCS)</span></b>, Rourkela, India, October 2012 <br> 
 </p>
@@ -78,8 +87,12 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 <li><p>Teaching Assistant, CMPEN 270 - Digital Design: Theory and Practice, Fall 2013 <br></p>
 </li>
 </ul>
-<h2>Experience</h2>
+<h2>Work Experience</h2>
 <ul>
+<li><p>Co-Op Engineer in <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a>, June 2015 - Present <br></p>
+</li>
+<li><p>Research Assistant in <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a>, June 2014 - May 2015 <br></p>
+</li>
 <li><p>Internship at <a href="http://www.iitkgp.ac.in/" target="_blank"> Indian Institute of Technology, Kharagpur</a>, May 2012 - July 2012 <br></p>
 </li>
 <li><p>Internship at <a href="http://www.drdo.gov.in/drdo/labs/PXE/English/index.jsp?pg=homebody.jsp" target="_blank"> Proof &amp; Experimental Establishment (PXE), Defence Research and Development Organisation </a>, December 2011 <br></p>
@@ -94,6 +107,10 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 <li><p>B. Tech. in <a href="http://nitrkl.ac.in/Academic/1Department/Home.aspx?hrtuery765hd=OA==-GS5YNjRcEt0=" target="_blank">Electronics and Instrumentation Engineering</a>, <a href="http://www.nitrkl.ac.in/" target="_blank">National Institute of Technology, Rourkela</a> 
 </p> <p>August 2009 - May 2013</p>
 </li>
+</ul>
+<h2>Awards</h2>
+<ul>
+<li><p>Student Travel Grant : ISCA 2015</p>
 </ul>
 <h2>Service</h2>
 <ul>
