--- a/footprints.html
+++ b/footprints.html
@@ -13,6 +13,19 @@
 </div>
 <h2><a href="index.html">Home</a></h2>
 <ul>
+<h2>Fall 2015</h2>
+<ul>
+<li><p>Coursework: Operating System Design (CSE 511) [Instructor: <a href="http://www.cse.psu.edu/~anand/">Dr. Anand Sivasubramaniam</a>]</p>
+</li>
+<li><p>Coursework: Applied Statistics (STAT 500) [Instructor: <a href="http://stat.psu.edu/people/ajw13">Dr. Andrew Wiesner</a>]</p>
+</li>
+<li><p>Coursework: Research Credits (CSE 596) [Advisor: <a href="http://www.cse.psu.edu/~das">Dr. Chita R. Das</a>]</p>
+</li>
+<li><p>Auditing: Microprocessor Architecture (CSE 532) [Instructor: <a href="http://www.cse.psu.edu/~anand/">Dr. Anand Sivasubramaniam</a>]</p>
+</li>
+<li><p>Auditing: Emerging Architectures for Mobile Systems (CSE 598B) [Instructor: <a href="http://www.cse.psu.edu/~anand/">Dr. Anand Sivasubramaniam</a>]</p>
+</li>
+</ul>
 <h2>Spring 2015</h2>
 <ul>
 <li><p>Coursework: Compiler Construction (CSE 521) [Instructor: <a href="http://www.cse.psu.edu/~kandemir/">Dr. Mahmut T. Kandemir</a>]</p>
