--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ try {
 
 <table class="imgtable"><tbody><tr><td>
 <img src="./index_files/website_photo.jpg" alt="" width="187px" height="230px">&nbsp;</td>
-<td align="right"><p>Ashutosh Pattnaik <br></p>
-<p>Ph.D. Candidate <br>
+<td align="right"><p><b>Ashutosh Pattnaik</b> <br>
+Ph.D. Candidate <br>
 111N IST Building <br>
 <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> <br>
 <a href="http://www.psu.edu/" target="_blank">Penn State University</a>, University Park, PA, 16802 <br> </p>
@@ -43,20 +43,24 @@ try {
 <a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b" target="_blank">LinkedIn Profile</a>
 <br>
 <a href="footprints.html">Ph.D. Footprint</a>
-<br></p>
+<br>
+<br>
+I am the submission chair of the <a href="http://adwaitjog.github.io/gpu_scheduling.html">1st Warp Scheduling Championship</a> to be 
+held in conjunction with <a href="http://www.microarch.org/micro48/">MICRO 2015, Waikiki, Hawaii</a>. Please consider submitting your 
+best scheduler!
+</p>
 </td></tr></tbody></table>
 <h2>About</h2>
-
-
-
 <!--  
 I am a member of High Performance Computing Lab at Penn State, where I work with my advisors Chita Das and Mahmut Kandemir. My research interests lie in the broad areas of computer architecture and systems. Primarily, I am interested in designing performance and energy efficient GPU-based platforms that are making headway in almost every kind of computing system ranging from warehouse-scale to wearable computers. Before joining Penn State in Fall 2009 with College of Engineering Fellowship, I completed my undergraduate studies from NIT Rourkela, India. 
 -->
 
 
 <p>I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> in the <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a> where I work with my advisor <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. I also collaborate with <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a> in the <a href="http://www.cse.psu.edu/research/mdl" target="_blank"> Microsystems Design Lab</a>.  
+<br>
+<br>
+After an awesome summer at Austin,TX working with amazing people at <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a>, I am back at Graduate School to resume my Ph.D.!
 
-<p>I have joined <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/">AMD Research</a> as a Co-Op Engineer since June 2015.
 <!--
 I also collaborate with 
 <a href="http://users.ece.cmu.edu/~omutlu/">Onur Mutlu</a>, 
@@ -80,24 +84,24 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 </p>
 </li>
 </ul>
-<h2>Teaching</h2>
-<ul>
-<li><p>Teaching Assistant, CMPEN 431 - Introduction to Computer Architecture, Spring 2014 <br></p>
-</li>
-<li><p>Teaching Assistant, CMPEN 270 - Digital Design: Theory and Practice, Fall 2013 <br></p>
-</li>
-</ul>
 <h2>Work Experience</h2>
 <ul>
-<li><p>Co-Op Engineer in <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a>, June 2015 - Present <br></p>
+<li><p>Co-Op Engineer in <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a>, June 2015 - Sept 2015 <br></p>
 </li>
-<li><p>Research Assistant in <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a>, June 2014 - May 2015 <br></p>
+<li><p>Research Assistant in <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a>, June 2014 - Present <br></p>
 </li>
 <li><p>Internship at <a href="http://www.iitkgp.ac.in/" target="_blank"> Indian Institute of Technology, Kharagpur</a>, May 2012 - July 2012 <br></p>
 </li>
 <li><p>Internship at <a href="http://www.drdo.gov.in/drdo/labs/PXE/English/index.jsp?pg=homebody.jsp" target="_blank"> Proof &amp; Experimental Establishment (PXE), Defence Research and Development Organisation </a>, December 2011 <br></p>
 </li>
 <li><p>Internship at <a href="http://www.sail.co.in/" target="_blank">Steel Authority of India Limited (SAIL)</a>, May 2011 - June 2011 <br></p>
+</li>
+</ul>
+<h2>Teaching</h2>
+<ul>
+<li><p>Teaching Assistant, CMPEN 431 - Introduction to Computer Architecture, Spring 2014 <br></p>
+</li>
+<li><p>Teaching Assistant, CMPEN 270 - Digital Design: Theory and Practice, Fall 2013 <br></p>
 </li>
 </ul>
 <h2>Educational Background</h2>
