--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ try {
 } catch(err) {}</script>
 <div id="layout-content">
 <div id="toptitle">
-<h1>Ashutosh Pattnaik's Homepage</h1>
+<h1><br>Ashutosh Pattnaik's Homepage</h1>
 </div>
 
 <table class="imgtable"><tbody>
@@ -51,8 +51,6 @@ Third Year Ph.D. Student <br>
 </td>
 </tr></tbody></table>
 <h2>ABOUT ME</h2>
-
-
 <p align="justify" style="text-align:justify">
 I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a>. I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisor <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. I also collaborate with <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a> in the <a href="http://www.cse.psu.edu/research/mdl" target="_blank"> Microsystems Design Lab</a>. I received my B. Tech in Electronics & Instrumentation Engineering from <a href="http://www.nitrkl.ac.in/" target="_blank">National Institute of Technology, Rourkela</a>.
 <br>
