--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <title>Ashutosh Pattnaik's Homepage</title>
 <meta name="keywords" content="Ashutosh Pattnaik, Penn State">
 <link rel="stylesheet" href="./index_files/jemdoc.css" type="text/css">
-<title>Ashutosh Pattnaik's Homepage</title>
+<title>Ashutosh Pattnaik</title>
 </head>
 <body>
 <div id="layout-content">
 <div id="toptitle">
-<h1><br>Ashutosh Pattnaik's Homepage</h1>
+<h1><br>Ashutosh Pattnaik</h1>
 </div>
 
 <table class="imgtable"><tbody>
@@ -18,7 +18,7 @@
 <img src="./index_files/website_photo.jpg" alt="" width="187px" height="230px">&nbsp;
 </td>
 
-<td align="right"><p><b>Ashutosh Pattnaik</b> <br>
+<td align="right"><p><br>
 Third Year Ph.D. Student <br>
 111N IST Building <br>
 <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> <br>
