--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Thesis: <a href="http://ethesis.nitrkl.ac.in/5283/1/109EI0297.pdf" target="_blan
 -->
 <div id="footer">
 <div id="footer-text">
-Page Updated on 27th Nov 2015.
+Page Updated on 27th Nov 2015. Penn State Seal is the copyright of The Pennsylvania State University.
 </div>
 
 <!-- Start of StatCounter Code for Default Guide -->
