Updare kandemir as advisor

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_bla
 </td>
 <td>
 <h2>RESEARCH </h2>
-<p align="justify" style="text-align:justify">I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisor <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. I also collaborate with <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a> in the <a href="http://www.cse.psu.edu/research/mdl" target="_blank"> Microsystems Design Lab</a>. My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.</p>
+<p align="justify" style="text-align:justify">I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisors <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. and <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a>. My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.</p>
 </td>
 </tr>
 </table>
