--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@ Third Year Ph.D. Student <br>
 </td>
 </tr></tbody></table>
 
+<h2>RECENT NEWS</h2>
+<ul>
+<li>Submission Chair for the <a href="http://ics16.bilkent.edu.tr/index.htm" target="_blank">30<sup>th</sup> International Conference on Supercomputing (ICS)</a>. 
+</li>
+</ul>
+
 <table class="imgtable"><tbody>
-<col width="375">
-  <col width="450">
+<col width="400">
+  <col width="475">
 <tr>
 <td>
 <h2>ABOUT ME</h2>
@@ -149,7 +155,7 @@ Thesis: <a href="http://ethesis.nitrkl.ac.in/5283/1/109EI0297.pdf" target="_blan
 <ul>
 <li>2016 (HPCA)
 </li>
-<li>2015 (MICRO, ISCA, HPCA, IPDPS, PPoPP)
+<li>2015 (MICRO, ISCA, HPCA, IPDPS, PPoPP, IGSC)
 </li>
 <li><p>2014 (MICRO, ICCAD)</p>
 </li>
