update ics final fix

--- a/index.html
+++ b/index.html
@@ -48,13 +48,15 @@ Third Year Ph.D. Student <br>
 </td>
 </tr></tbody></table>
 
+<h2>RECENT NEWS</h2>
+<ul>
+<li>Submission Chair for the <a href="http://ics16.bilkent.edu.tr/index.htm" target="_blank">30<sup>th</sup> International Conference on Supercomputing (ICS)</a>. 
+</li>
+</ul>
+
 <table class="imgtable"><tbody>
-<col width="400">
-<<<<<<< HEAD
-  <col width="475">
-=======
-  <col width="425">
->>>>>>> origin/master
+<col width="375">
+  <col width="450">
 <tr>
 <td>
 <h2>ABOUT ME</h2>
@@ -63,7 +65,7 @@ I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_bla
 </td>
 <td>
 <h2>RESEARCH </h2>
-<p align="justify" style="text-align:justify">I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisors <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. and <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a>. My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.</p>
+<p align="justify" style="text-align:justify">I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisor <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. I also collaborate with <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a> in the <a href="http://www.cse.psu.edu/research/mdl" target="_blank"> Microsystems Design Lab</a>. My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.</p>
 </td>
 </tr>
 </table>
@@ -153,7 +155,7 @@ Thesis: <a href="http://ethesis.nitrkl.ac.in/5283/1/109EI0297.pdf" target="_blan
 <ul>
 <li>2016 (HPCA)
 </li>
-<li>2015 (MICRO, ISCA, HPCA, IPDPS, PPoPP)
+<li>2015 (MICRO, ISCA, HPCA, IPDPS, PPoPP, IGSC)
 </li>
 <li><p>2014 (MICRO, ICCAD)</p>
 </li>
