--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@ Third Year Ph.D. Student <br>
 </td></p>
 
 <td align="centre">
-<img src="./index_files/psuseal.png" alt="" width="150px" height="150px">
+<img src="./index_files/psuseal.png" alt="" width="120px" height="120px">
+<br>
+<img src="./index_files/nitrkl.png" alt="" width="120px" height="120px">
 </td>
 </tr></tbody></table>
 
@@ -160,16 +162,13 @@ Thesis: <a href="http://ethesis.nitrkl.ac.in/5283/1/109EI0297.pdf" target="_blan
 
 <td>
 <h2>SERVICE</h2>
+On-behalf reviewer for:
 <ul>
-<li><p>On-behalf reviewer for:</p>
-<ul>
-<li>2016 (HPCA)
+<li>2016 (HPCA, ISCA)
 </li>
 <li>2015 (MICRO, ISCA, HPCA, IPDPS, PPoPP, IGSC)
 </li>
 <li><p>2014 (MICRO, ICCAD)</p>
-</li>
-</ul>
 </li>
 </ul>
 </td>
@@ -196,7 +195,7 @@ Thesis: <a href="http://ethesis.nitrkl.ac.in/5283/1/109EI0297.pdf" target="_blan
 -->
 <div id="footer">
 <div id="footer-text">
-Page Updated on 27th Nov 2015. Penn State Seal is the copyright of The Pennsylvania State University.
+Page Updated on 27th Nov 2015. Penn State Seal is the copyright of The Pennsylvania State University. NIT Rourkela logo is the copyright of National Institute of Technology, Rourkela.
 </div>
 
 <!-- Start of StatCounter Code for Default Guide -->
