sigmetrics_pdf_update

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ and <a href="https://sites.google.com/site/lohgabe/">Gabriel H. Loh</a>.
 -->
 <h2>PUBLICATIONS</h2>
 <ul>
-<li><p align="justify" style="text-align:justify">Adwait Jog, Onur Kayiran, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir, Onur Mutlu, Ravishankar Iyer, Chita R. Das <br> <i><span style="color: DarkBlue ">Exploiting Core-Criticality for Enhanced GPU Performance [PDF Coming Soon]</span></i>, <br>
+<li><p align="justify" style="text-align:justify">Adwait Jog, Onur Kayiran, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir, Onur Mutlu, Ravishankar Iyer, Chita R. Das <br> <a href="http://ashutoshpattnaik.github.io/docs/2016_SIGMETRICS_Adwait.pdf" target="_blank"> <i><span style="color: DarkBlue ">Exploiting Core-Criticality for Enhanced GPU Performance </span></i></a>, <br>
 Proceedings of the <a href="http://www.sigmetrics.org/sigmetrics2016/" target="_blank"> 42nd ACM International Conference on Measurement and Modeling of Computer Systems </a> 
 <b><span style="color: FireBrick ">(SIGMETRICS)</span></b>, Antibes Juan-Les-Pins, France, June 2016 <br> 
 </p>
