--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ h2::first-letter {
 </td>
 
 <td align="right"><p><br>
-Third Year Ph.D. Student <br>
+Third Year Ph.D. Candidate <br>
 111N IST Building <br>
 <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> <br>
 <a href="http://www.psu.edu/" target="_blank">Penn State University</a>, University Park, PA, 16802 <br> <br>
@@ -44,9 +44,9 @@ Third Year Ph.D. Student <br>
 </td></p>
 
 <td align="centre">
-<img src="./index_files/psuseal.png" alt="" width="120px" height="120px">
+<a href="http://www.psu.edu/" target="_blank"><img src="./index_files/psuseal.png" alt="" width="120px" height="120px"></a>
 <br>
-<img src="./index_files/nitrkl.png" alt="" width="120px" height="120px">
+<a href="http://www.nitrkl.ac.in/" target="_blank"><img src="./index_files/nitrkl.png" alt="" width="120px" height="120px"></a>
 </td>
 </tr></tbody></table>
 
@@ -57,6 +57,9 @@ Third Year Ph.D. Student <br>
 <li>Submission Chair for the <a href="http://ics16.bilkent.edu.tr/index.htm" target="_blank">30<sup>th</sup> International Conference on Supercomputing (ICS)</a>. 
 </li>
 </ul>
+
+<p align="justify" style="text-align:justify">
+After an awesome summer internship at Austin, TX last year, I am back for another summer internship at<a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a>, Sunnyvale, CA for this summer.</p>
 
 <table class="imgtable"><tbody>
 <col width="375">
@@ -74,8 +77,7 @@ I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_bla
 </td>
 </tr>
 </table>
-<p align="justify" style="text-align:justify">
-After an awesome summer at Austin,TX working with amazing people at <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a>, I am back at Graduate School to resume my Ph.D.!</p>
+
 <!--
 I also collaborate with 
 <a href="http://users.ece.cmu.edu/~omutlu/">Onur Mutlu</a>, 
@@ -105,15 +107,24 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 </ul>
 <h2>WORK EXPERIENCE</h2>
 <ul>
-<li><p>Co-Op Engineer in <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a>, June 2015 - Sept 2015 <br></p>
+<li><p>Co-Op Engineer in <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a>, May 2016 - Present <br></p>
 </li>
-<li><p>Research Assistant in <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a>, June 2014 - Present <br></p>
+<li><p>Research Assistant in <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a>, June 2014 - April 2016 <br></p>
+</li>
+<li><p>Co-Op Engineer in <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a>, June 2015 - Sept 2015 <br></p>
 </li>
 <li><p>Internship at <a href="http://www.iitkgp.ac.in/" target="_blank"> Indian Institute of Technology, Kharagpur</a>, May 2012 - July 2012 <br></p>
 </li>
 <li><p>Internship at <a href="http://www.drdo.gov.in/drdo/labs/PXE/English/index.jsp?pg=homebody.jsp" target="_blank"> Proof &amp; Experimental Establishment (PXE), Defence Research and Development Organisation </a>, December 2011 <br></p>
 </li>
 <li><p>Internship at <a href="http://www.sail.co.in/" target="_blank">Steel Authority of India Limited (SAIL)</a>, May 2011 - June 2011 <br></p>
+</li>
+</ul>
+<h2>TALKS & PRESENTATIONS</h2>
+<ul>
+<li><p>Teaching Assistant, CMPEN 431 - Introduction to Computer Architecture, Spring 2014 <br></p>
+</li>
+<li><p>Teaching Assistant, CMPEN 270 - Digital Design: Theory and Practice, Fall 2013 <br></p>
 </li>
 </ul>
 <h2>TEACHING</h2>
@@ -145,6 +156,8 @@ Thesis: <a href="http://ethesis.nitrkl.ac.in/5283/1/109EI0297.pdf" target="_blan
 <ul>
 <li><p>Student Travel Grant:<br></p>
 <ul>
+<li><p>SIGMETRICS 2016</p>
+</li>
 <li><p>ISCA 2015</p>
 </li>
 </ul>
@@ -155,7 +168,9 @@ Thesis: <a href="http://ethesis.nitrkl.ac.in/5283/1/109EI0297.pdf" target="_blan
 <ul>
 <li><a href="http://www.ieee.org/" target="_blank">IEEE Student Member</a> <br>
 </li>
-<li><p><a href="http://www.acm.org/" target="_blank">ACM Student</a> & <a href="http://www.sigarch.org/" target="_blank">ACM SIGARCH</a>
+<li><p><a href="http://www.acm.org/" target="_blank">ACM Student</a> 
+</li>
+<li><a href="http://www.sigarch.org/" target="_blank">ACM SIGARCH</a> & <a href="http://www.sigmetrics.org/" target="_blank">ACM SIGMETRICS</a> <br>
 </li>
 </ul>
 </tr>
@@ -164,7 +179,7 @@ Thesis: <a href="http://ethesis.nitrkl.ac.in/5283/1/109EI0297.pdf" target="_blan
 <h2>SERVICE</h2>
 On-behalf reviewer for:
 <ul>
-<li>2016 (HPCA, ISCA)
+<li>2016 (HPCA, ISCA, MICRO)
 </li>
 <li>2015 (MICRO, ISCA, HPCA, IPDPS, PPoPP, IGSC)
 </li>
@@ -181,7 +196,7 @@ On-behalf reviewer for:
 </li>
 <li>Petrolhead
 </li>
-<li>Traveller (10/196 and counting)
+<li>Traveller (14/196 and counting)
 </li>
 </ul>
 </td>
@@ -195,7 +210,7 @@ On-behalf reviewer for:
 -->
 <div id="footer">
 <div id="footer-text">
-Page Updated on 27th Nov 2015. Penn State Seal is the copyright of The Pennsylvania State University. NIT Rourkela logo is the copyright of National Institute of Technology, Rourkela.
+Page Updated on 24th Jun 2015. Penn State Seal is the copyright of The Pennsylvania State University. NIT Rourkela logo is the copyright of National Institute of Technology, Rourkela.
 </div>
 
 <!-- Start of StatCounter Code for Default Guide -->
