--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 </ul>
 <h2>TALKS & PRESENTATIONS</h2>
 <ul>
-<li><p>Teaching Assistant, CMPEN 431 - Introduction to Computer Architecture, Spring 2014 <br></p>
+<li><p><i>Exploiting Core-Criticality for Enhanced GPU Performance </i><br>Antibes Juan-les-Pins, France, SIGMETRICS 2016 <br></p>
 </li>
-<li><p>Teaching Assistant, CMPEN 270 - Digital Design: Theory and Practice, Fall 2013 <br></p>
+<li><p><i>A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm</i><br>Rourkela, India, ICCCS 2012<br></p>
 </li>
 </ul>
 <h2>TEACHING</h2>
