--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Third Year Ph.D. Candidate <br>
 </ul>
 
 <p align="justify" style="text-align:justify">
-After an awesome summer internship at Austin, TX last year, I am back for another summer internship at<a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a>, Sunnyvale, CA for this summer.</p>
+After an awesome summer internship at AMD Research, Austin, TX last year, I am back for another internship at<a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a>, Sunnyvale, CA for the summer.</p>
 
 <table class="imgtable"><tbody>
 <col width="375">
