--- a/new_version/index.html
+++ b/new_version/index.html
@@ -23,10 +23,10 @@
 				<ul>
 					<li><a href="#intro">HOME</a></li>
 					<li><a href="#one">ABOUT ME</a></li>
-					<li><a href="#two">PUBLICATIONS AND TALKS</a></li>
+					<li><a href="#two">PUBLICATIONS</a></li>
 					<li><a href="#three">WORK EXPERIENCE</a></li>
 					<li><a href="#four">ACADEMIC BACKGROUND</a></li>
-					<li><a href="#five">MISC</a></li>
+					<li><a href="#five">MISCELLANEOUS</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -38,9 +38,9 @@
 		<!-- Intro -->
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
-				<h1>Ashutosh Pattnaik</h1>
+				<h1>ASHUTOSH PATTNAIK</h1>
 				<!-- Intro -->
-				<section class="wrapper style2 spotlights">
+				<section class="wrapper spotlights">
 					<section>
 						<a href="#" class="image"><img src="images/website_photo.jpg" alt="" data-position="center center" /></a>
 						<div class="content">
@@ -55,11 +55,12 @@
 									<a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b" target="_blank"><img width=32 src="images/linkedin.ico"></a>
 									<a href="mailto:ashutosh@cse.psu.edu" target="_blank"><img width=32 src="images/mail.ico"></a><br>
 									<br>
-									Recent News<br>
-									<img width=24 src="images/paper-icon.png"> Two papers accepted in <a href="http://pactconf.org/program/pact-2016-accepted-papers/"  target="_blank">PACT 2016</a>
-								</p>
-								<ul class="actions">
+									Recent News!<br>
+									<img width=24 src="images/paper-icon.png"> Two papers accepted in <a href="http://pactconf.org/program/pact-2016-accepted-papers/"  target="_blank">PACT 2016</a><br>
+									<img width=24 src="images/work.png"> I am currently interning at<a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a> for the summer.</p>
+									<ul class="actions">
 									<li><a href="#one" class="button">Learn more</a></li>
+									<li><a href="cv.pdf" target="_blank" class="button">CV</a></li>
 								</ul>
 							</div>
 						</div>
@@ -78,9 +79,11 @@
 					<div class="inner">
 						<h2>ABOUT ME</h2>
 						<p align="justify" style="text-align:justify">
-							I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a>. I received my B. Tech in Electronics & Instrumentation Engineering from <a href="http://www.nitrkl.ac.in/" target="_blank">National Institute of Technology, Rourkela</a>.</p>
+							I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a>. I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisors <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. and <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a>. I also collaborate with 
+							<a href="http://users.ece.cmu.edu/~omutlu/">Dr. Onur Mutlu</a>. My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">Academic Background</a></li>
+								<li><a href="#four" class="button">Academic Background</a></li>
+								<li><a href="#three" class="button">Work Experience</a></li>
 							</ul>
 						</div>
 					</div>
@@ -90,14 +93,17 @@
 					<div class="content">
 						<div class="inner">
 							<h2>CURRENT RESEARCH</h2>
-							<p align="justify" style="text-align:justify">I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisors <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. and <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a>. I also collaborate with 
-								<a href="http://users.ece.cmu.edu/~omutlu/">Dr. Onur Mutlu</a>. My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.</p>
-								<ul class="actions">
-									<li><a href="#two" class="button">Publications</a></li>
-								</ul>
-							</div>
+							<p align="justify" style="text-align:justify">
+							I am currently working on understanding the research issues and opportunities involved in processing in memory in GPUs. 
+							Specifically, I am trying to understand the issues of "which" computations to offload to the PIM processors, and "how" to
+							co-locate the computations and data to minimize the data movements in a GPU system while improving performance.
+							</p>
+							<ul class="actions">
+								<li><a href="#two" class="button">Publications</a></li>
+							</ul>
 						</div>
-					</section>
+					</div>
+				</section>
 						<!-- <section>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
@@ -113,7 +119,7 @@
 					</section>
 
 					<!-- Two -->
-					<section id="two" class="wrapper style2 fade-up">
+					<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>PUBLICATIONS</h2>
 							<!-- 		<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p> -->
@@ -173,35 +179,164 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 </p>
 </section> -->
 </div>
-<ul class="actions">
-	<li><a href="#" class="button">Learn more</a></li>
-</ul>
 </div>
 </section>
 
 <!-- Three -->
-<section id="three" class="wrapper style1 fade-up">
+<section id="three" class="wrapper style2 fade-up">
 	<div class="inner">
-		<h2>Work Experience</h2>
-
+		<h2>WORK EXPERIENCE</h2>
+		<table>
+			<tr><td style="vertical-align:middle;">
+				<a class="image"><img src="images/amd-research.png" alt="" data-position="center center"  width="120px"/></a>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>Co-Op Engineer<br> <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research, Sunnyvale, CA</a> <br></p>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>May 2016 - Present <br></p>
+			</td>
+		</tr>
+		<tr><td style="vertical-align:middle;">
+			<a class="image"><img src="images/psuseal.png" alt="" data-position="center center"  width="100px" /></a>
+		</td>
+		<td style="vertical-align:middle;">
+			<p>Graduate Assistant <br><a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a><br>
+				Pennsylvania State University</p>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>August 2013 - April 2016<br></p>
+			</td>
+			<tr><td style="vertical-align:middle;">
+				<a class="image"><img src="images/amd-research.png" alt="" data-position="center center"  width="120px" /></a>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>Co-Op Engineer <br> <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research, Austin, TX</a><br></p>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>June 2015 - Sept 2015<br></p>
+			</td>
+			<tr><td style="vertical-align:middle;">
+				<a class="image"><img src="images/iit.png" alt="" data-position="center center"  width="100px" /></a>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>Summer Research Intern<br> <a href="http://www.iitkgp.ac.in/" target="_blank"> Indian Institute of Technology (IIT), Kharagpur</a><br></p>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>May 2012 - July 2012 <br></p>
+			</td>
+			<tr><td style="vertical-align:middle;">
+				<a class="image"><img src="images/drdo.png" alt="" data-position="center center"  width="100px" /></a>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>Internship <br> <a href="http://www.drdo.gov.in/drdo/labs/PXE/English/index.jsp?pg=homebody.jsp" target="_blank"> Proof &amp; Experimental Establishment (PXE)<br> Defence Research and Development Organisation </a><br></p>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>December 2011<br></p>
+			</td>
+			<tr><td style="vertical-align:middle;">
+				<a class="image"><img src="images/sail.png" alt="" data-position="center center"  width="100px" /></a>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>Internship <br> <a href="http://www.sail.co.in/" target="_blank">Steel Authority of India Limited (SAIL)</a><br></p>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>May 2011 - June 2011<br></p>
+			</td>
+		</tr>
+	</table>
 </div>
-	</section>
+</section>
+
 
 <!-- Four -->
 <section id="four" class="wrapper style1 fade-up">
 	<div class="inner">
-		<h2>Academic Background</h2>
-
+		<h2>ACADEMIC BACKGROUND</h2>
+		<table>
+			<tr><td style="vertical-align:top;">
+				<a class="image"><img src="images/psuseal.png" alt="" data-position="center center"  width="120px" height="120px"/></a>
+			</td>
+			<td>
+				<p>Ph.D. Candidate <br><a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a>, <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a><br>August 2013 - Present</p>
+			</td>
+		</tr>
+		<tr><td style="vertical-align:top;">
+			<a class="image"><img src="images/nitrkl.png" alt="" data-position="center center"  width="120px" height="120px"/></a>
+		</td>
+		<td>
+			<p>B. Tech. in <a href="http://nitrkl.ac.in/Academic/1Department/Home.aspx?hrtuery765hd=OA==-GS5YNjRcEt0=" target="_blank">Electronics and Instrumentation Engineering</a><br><a href="http://www.nitrkl.ac.in/" target="_blank">National Institute of Technology, Rourkela</a> <br>
+				August 2009 - May 2013<br>
+				Thesis: <a href="http://ethesis.nitrkl.ac.in/5283/1/109EI0297.pdf" target="_blank">Robotic Arm Control Through Human Arm Movement using Accelerometers</a> 
+			</p>
+		</td>
+	</tr>
+</table>
 </div>
-	</section>
+</section>
 
-	<!-- Five -->
-	<section id="five" class="wrapper style1 fade-up">
+<!-- Five -->
+<section id="five" class="wrapper style2-alt fade-up">
 	<div class="inner">
-		<h2>Misc.</h2>
+		<h2>MISCELLANEOUS</h2>
+		<table class="imgtable"><tbody>
+			<col width="425">
+			<col width="400">
+			<tr>
 
-</div>
-	</section>
+				<td>
+					<h2>AWARDS</h2>
+					<ul>
+						<li>Student Travel Grant:
+							<ul>
+								<li>SIGMETRICS 2016
+								</li>
+								<li>ISCA 2015
+								</li>
+							</ul>
+						</td>
+
+						<td>
+							<h2>MEMBERSHIPS</h2>
+							<ul>
+								<li><a href="http://www.ieee.org/" target="_blank">IEEE Student Member</a>
+								</li>
+								<li><a href="http://www.acm.org/" target="_blank">ACM Student</a> 
+								</li>
+								<li><a href="http://www.sigarch.org/" target="_blank">ACM SIGARCH</a> & <a href="http://www.sigmetrics.org/" target="_blank">ACM SIGMETRICS</a> 
+								</li>
+							</ul>
+						</tr>
+
+						<td>
+							<h2>SERVICE</h2>
+							On-behalf reviewer for:
+							<ul>
+								<li>2016 (HPCA, ISCA, MICRO, ICCD)
+								</li>
+								<li>2015 (MICRO, ISCA, HPCA, IPDPS, PPoPP, IGSC)
+								</li>
+								<li><p>2014 (MICRO, ICCAD)</p>
+								</li>
+							</ul>
+						</td>
+						<td>
+							<h2>OUTSIDE ACADS</h2>
+							<ul>
+								<li>Manga lover
+								</li>
+								<li>Technophillic
+								</li>
+								<li>Petrolhead
+								</li>
+								<li>Traveller (14/196 and counting)
+								</li>
+							</ul>
+						</td>
+					</tr>
+				</tbody></table>
+			</div>
+		</section>
 	<!-- 
 <section id="five" class="wrapper style1 fade-up">
 	<div class="inner">
