--- a/new_version/index.html
+++ b/new_version/index.html
@@ -57,7 +57,8 @@
 									<br>
 									Recent News!<br>
 									<img width=24 src="images/paper-icon.png"> Two papers accepted in <a href="http://pactconf.org/program/pact-2016-accepted-papers/"  target="_blank">PACT 2016</a><br>
-									<img width=24 src="images/work.png"> I am currently interning at<a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a> for the summer.</p>
+									<img width=24 src="images/work.png"> I am currently interning at<a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a> for the summer.<br>
+									<img width=24 src="images/paper-icon.png"> Submission Chair for <a href="http://ics16.bilkent.edu.tr"  target="_blank">ICS 2016</a><br></p>
 									<ul class="actions">
 									<li><a href="#one" class="button">Learn more</a></li>
 									<li><a href="cv.pdf" target="_blank" class="button">CV</a></li>
@@ -78,9 +79,10 @@
 				<div class="content">
 					<div class="inner">
 						<h2>ABOUT ME</h2>
-						<p align="justify" style="text-align:justify">
+						<p align="justify" style="text-align:justify" style="font-size:115%">
 							I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a>. I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisors <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. and <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a>. I also collaborate with 
-							<a href="http://users.ece.cmu.edu/~omutlu/">Dr. Onur Mutlu</a>. My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.</p>
+							<a href="http://users.ece.cmu.edu/~omutlu/">Dr. Onur Mutlu</a>. My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.
+							</p>
 							<ul class="actions">
 								<li><a href="#four" class="button">Academic Background</a></li>
 								<li><a href="#three" class="button">Work Experience</a></li>
@@ -93,7 +95,7 @@
 					<div class="content">
 						<div class="inner">
 							<h2>CURRENT RESEARCH</h2>
-							<p align="justify" style="text-align:justify">
+							<p align="justify" style="text-align:justify" style="font-size:115%">
 							I am currently working on understanding the research issues and opportunities involved in processing in memory in GPUs. 
 							Specifically, I am trying to understand the issues of "which" computations to offload to the PIM processors, and "how" to
 							co-locate the computations and data to minimize the data movements in a GPU system while improving performance.
